Make responsive and small style tweaks

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FLYNN</title>
     <link rel="stylesheet" href="css/reset.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Ruda&display=swap" rel="stylesheet">
@@ -42,7 +43,7 @@
           <dd>Kevin Flynn reinstated as an employee of ENCOM and promoted to V.P. Creative Development.</dd>
         </dl>
       </section>
-      <p>Timeline credit goes to <a href="https://tron.fandom.com/wiki/Timeline_(TRON)">Tron Wiki</a>.</p>
+      <p id="credit">Timeline credit goes to <a href="https://tron.fandom.com/wiki/Timeline_(TRON)">Tron Wiki</a>.</p>
     </main>
 
     <footer>
